@@ -1,4 +1,4 @@
-// -*- C++ -*- Time-stamp: <06/10/04 10:57:46 ptr>
+// -*- C++ -*- Time-stamp: <06/11/24 20:14:45 ptr>
 
 /*
  * Copyright (c) 2006
@@ -40,40 +40,18 @@ Naming::~Naming()
   // cnd.wait();
 }
 
-void Naming::names_list( const stem::NameRecord& nr )
+void Naming::names_list( const nsrecords_type& nr )
 {
   // std::cerr << hex << nr.addr << " " << nr.record << dec << endl;
-
-  if ( nr.addr == stem::badaddr ) { // the last record
-    cnd.set(true);
-  } else {
-    lst.push_back( nr );
-  }
-}
-
-void Naming::names_name( const stem::NameRecord& nr )
-{
-  // std::cerr << hex << nr.addr << dec << endl;
-
-  if ( nr.addr == stem::badaddr ) { // the last record
-    cnd.set(true);
-  } else {
-    lst.push_back( nr );
-  }
-}
-
-void Naming::names_list1( const nsrecords_type& nr )
-{
-  // std::cerr << hex << nr.addr << " " << nr.record << dec << endl;
-  copy( nr.container.begin(), nr.container.end(), back_insert_iterator<nsrecords_type::container_type>(lst1) );
+  copy( nr.container.begin(), nr.container.end(), back_insert_iterator<nsrecords_type::container_type>(lst) );
 
   cnd.set(true);
 }
 
-void Naming::names_name1( const nsrecords_type& nr )
+void Naming::names_name( const nsrecords_type& nr )
 {
   // std::cerr << hex << nr.addr << dec << endl;
-  copy( nr.container.begin(), nr.container.end(), back_insert_iterator<nsrecords_type::container_type>(lst1) );
+  copy( nr.container.begin(), nr.container.end(), back_insert_iterator<nsrecords_type::container_type>(lst) );
 
   cnd.set(true);
 }
@@ -84,8 +62,6 @@ void Naming::wait()
 }
 
 DEFINE_RESPONSE_TABLE( Naming )
-  EV_T_(0,EV_EDS_NM_LIST,names_list,stem::NameRecord)
-  EV_T_(0,EV_EDS_NS_ADDR,names_name,stem::NameRecord)
-  EV_T_(0,EV_STEM_NS1_LIST,names_list1,nsrecords_type)
-  EV_T_(0,EV_STEM_NS1_NAME,names_name1,nsrecords_type)
+  EV_T_(0,EV_STEM_NS_LIST,names_list,nsrecords_type)
+  EV_T_(0,EV_STEM_NS_NAME,names_name,nsrecords_type)
 END_RESPONSE_TABLE
